syntax = "proto3";
package pb;

import "google/protobuf/timestamp.proto";

message ProdModel {
  int32 id = 1;
  string prodName = 2;
  float prodPrice = 3;
}

message OrderInfo {
  // 订单 id
  int32 id = 1;
  // 订单 编号
  int32 no = 2;
  // 购买用户 id
  int32 userId = 3;
  // 支付总额
  float pay = 4;
  // 订单创建时间
  google.protobuf.Timestamp createTime = 5;
  // 嵌套子订单信息
  repeated OrderDetail detail = 6;
}

// 子订单模型
message OrderDetail {
  int32 id = 1;
  string orderId = 2;
  int32 prodId = 3;
  int32 quantity = 4;
  // 支付总额
  float totalAmount = 5;
}

// 用户积分
message UserScore {
  int32 id = 1;
  float score = 2;
}

// 并发的用户订单，用于秒杀
message SpikeUserOrder {
  int64 id = 1;
  int64 no = 2;
  int64 userId = 3;
  string productName = 4;
  float price = 5;
  google.protobuf.Timestamp createTime = 6;
}
